--- a/configs.ini
+++ b/configs.ini
@@ -4,7 +4,7 @@ CloseTip=False
 OneRun=True
 Lang=¼òÌåÖÐÎÄ
 [TJavaConfig]
-JavaSDK=D:\MyPrograms\Java\jdk-17.0.3.1\bin\
+JavaSDK=
 [TApkAndroidConfig]
 IsInstallAutoRun=True
 IsCompiledFlash=True
@@ -14,6 +14,6 @@ AutoSign=True
 AutoLock=False
 AutoWordWarp=False
 SelColor=0
-FontName=Courier New
-FontSize=10
+FontName=Sarasa Mono TC
+FontSize=14
 AutoCodeEditHelper=False
